# Bucks-browser

./: .gitignore  bootstrap.js  chat-engine.js  index.html  install.ps1  ipfs-node.js  launch.js  launch.ps1  main.js  package-lock.json  package.json  preload.js  renderer.js  run_cluster.ps1  signal-store.js  styles.css
assets/: blocklist.json  newtab.html
bucks-app/: package-lock.json  package.json  vite.config.js
bucks-app/src/: app.css
bucks-app/src-tauri/: tauri.conf.json
legacy_v1/: index.html  main.js  package-lock.json  package.json  preload.js
legacy_v1/bucks-native-browser/: CMakeLists.txt
legacy_v1/bucks-native-browser/src/: EphemeralUI.qml  Home.qml  cryptobridge.cpp  cryptobridge.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  slminterface.cpp  slminterface.h  stubs.cpp  test.qml
legacy_v1/next-shell/: list_models.js  next.config.ts  package-lock.json  package.json
next-shell/: package-lock.json  package.json  test_gemini.js  test_quotas.js  test_quotas2.js
next-shell/app/: globals.css  page.tsx
next-shell/components/: AuthGuard.tsx  ClientLayout.tsx  CosmicWeb.tsx  Header.tsx  SearchInput.tsx  Sidebar.tsx
next-shell/context/: ApiKeysContext.tsx  BrowserContext.tsx
ui/: __next.__PAGE__.txt  __next._tree.txt  _not-found.html  _not-found.txt  create.html  feed.html  index.html  index.txt  login.html  messages.html  notifications.html  profile.html  qr-scan.html  recommended.html  recover.html  search.html  search.txt  services.html  settings.html  settings.txt
ui/_not-found/: __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
ui/create/: __next._full.txt  __next._tree.txt  __next.create.__PAGE__.txt
ui/feed/: __next._full.txt  __next._tree.txt  __next.feed.__PAGE__.txt
ui/login/: __next._full.txt  __next._tree.txt  __next.login.__PAGE__.txt
ui/messages/: __next._full.txt  __next._tree.txt  __next.messages.__PAGE__.txt  default.html
ui/notifications/: __next._full.txt  __next._tree.txt  (+1 more)
(+107 files in other folders)
